<resources>

    <string name="app_name">微信自动添加好友</string>
    <string name="login_usernameTips">微信号：</string>
    <string name="usernameHint">请输入微信号</string>
    <string name="realName">姓名：</string>
    <string name="realNameHint">请输入您的姓名</string>
    <string name="Login_passwordTips">密码：</string>
    <string name="passwordHint">请输入6&#8211;30位的密码</string>
    <string name="Register_newpasswordTips">确认密码：</string>
    <string name="newpasswordHint">请输入6&#8211;30位的确认密码</string>
    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码了</string>
    <string name="register">注册</string>
    <string name="android_id">机器码：</string>
    <string name="phone">手机号码：</string>
    <string name="phoneHint">请正确填写，注册后将成为您的车享付账号</string>
    <string name="monitor_app">心跳检测</string>
    <string name="device_id">设备号：</string>
    <string name="last_monitor_time">最后一次心跳时间：</string>
    <string name="last_notification_information">最后一次通知信息：</string>
    <string name="start_monitor">开始监控</string>

</resources>